--- a/Market.Services/Market.Services.csproj
+++ b/Market.Services/Market.Services.csproj
@@ -7,8 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Implementations" />
-      <Folder Include="Interfaces" />
+      <ProjectReference Include="..\Market.DataAccessLayer\Market.DataAccessLayer.csproj" />
     </ItemGroup>
 
 </Project>
