--- a/Market.DataAccessLayer/Market.DataAccessLayer.csproj
+++ b/Market.DataAccessLayer/Market.DataAccessLayer.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.14" />
     </ItemGroup>
 
     <ItemGroup>
