--- a/Market.Domain/Market.Domain.csproj
+++ b/Market.Domain/Market.Domain.csproj
@@ -10,4 +10,9 @@
       <PackageReference Include="AutoMapper" Version="12.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="ViewModels\AdminPanel" />
+      <Folder Include="ViewModels\User" />
+    </ItemGroup>
+
 </Project>
